--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,9 +1,14 @@
-@keyframes test {
-    from {opacity: 1.0;}
-    to {opacity: 0.0;}
+body {
+    background-color: slategray;
 }
 
-.navbar {
-    animation-name: test;
-    animation-duration: 4s;
+#nav-main {
+    stroke: yellow;
+    stroke-width: 0;
+    animation-fill-mode: forwards;
+    transition: stroke-width 1.3s ease-in-out;
+}
+
+#nav-main:hover {
+    stroke-width: 5;
 }
