--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,16 +1,16 @@
 body {
-    background-color: slategray;
+    background-color: #1d1d1f;
 }
 
 #nav-button {
-    stroke: yellow;
-    stroke-width: 0;
+    stroke: #FFDF80;
+    stroke-width: 13;
     animation-fill-mode: forwards;
-    transition: stroke-width 1.0s ease-in-out;
+    transition: stroke-width 0.2s ease-out;
 }
 
 #nav-button:hover {
-    stroke-width: 15;
+    stroke-width: 25;
 }
 
 @keyframes glowSpread {
@@ -26,7 +26,7 @@ body {
 
 #glow-container {
     opacity: 0.0;
-    fill: yellow;
+    fill: #FFDF80;
     width: 10px;
 }
 
@@ -48,8 +48,8 @@ body {
 }
 
 .display-about {
-    animation: displayRects 0.5s forwards;
-    animation-delay: 1.0s;
+    animation: displayRects 1.0s forwards;
+    animation-delay: 0.5s;
 }
 
 #projects {
@@ -58,7 +58,7 @@ body {
 
 .display-projects {
     animation: displayRects 0.5s forwards;
-    animation-delay: 2s;
+    animation-delay: 1.0s;
 }
 
 #links {
