--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -128,3 +128,38 @@ p {
         opacity: 0.0;
     }
 }
+
+/* masthead styling */
+
+#masthead {
+    position: fixed;
+    top: 12%;
+    left: 20%;
+    height: 40%;
+    width: 60%;
+    border: 1px solid red;
+    text-align: center;
+}
+
+#name {
+    position: absolute;
+    top: 5%;
+    left: 10%;
+    width: 40%;
+}
+
+#profile-pic {
+    position: absolute;
+    left: 60%;
+    top: 5%;
+    height: 90%;
+    width: 20%;
+}
+
+#subname {
+    position: absolute;
+    top: 25%;
+    left: 10%;
+    width: 40%;
+    line-height: 300%;
+}
