--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,8 +29,8 @@ h2 {
     left: 1%;
     height: 36px;
     width: 36px;
-    background-color: blue;
-    border: 1.2px solid #FFDF80;
+    background-color: #1d1d1f;
+    border: 1.2px solid white;
     border-radius: 5px;
     animation-fill-mode: forwards;
     transition: border-width 0.2s ease-out;
@@ -42,7 +42,7 @@ h2 {
     height: 11%;
     width: 80%;
     border-radius: 5px;
-    background-color: red;
+    background-color: white;
 }
 
 #top {
@@ -68,7 +68,7 @@ h2 {
     left: 1%;
     width: 36px;
     height: 38px;
-    background-color: #FFDF80;
+    background-color: white;
     border-radius: 5px;
 }
 
@@ -97,7 +97,7 @@ h2 {
 .navtab {
     opacity: 0.0;
     position: absolute;
-    background-color: blue;
+    background-color: #1d1d1f;
     top: 7%;
     width: 23.5%;
     height: 86%;
@@ -150,7 +150,8 @@ h2 {
     left: 20%;
     height: 40%;
     width: 60%;
-    border: 1px solid red;
+    border: 1px solid white;
+    border-radius: 5px;
     text-align: center;
 }
 
@@ -185,7 +186,8 @@ h2 {
     left: 20%;
     height: 40%;
     width: 60%;
-    border: 1px solid red;
+    border: 1px solid white;
+    border-radius: 5px;
     text-align: center;
 }
 
@@ -206,7 +208,8 @@ h2 {
     left: 0%;
     height: 100%;
     width: 65%;
-    border: 1px solid red;
+    border: 1px solid white;
+    border-radius: 5px;
     text-align: center;
     margin: 0;
 }
@@ -217,7 +220,8 @@ h2 {
     left: 65%;
     height: 100%;
     width: 35%;
-    border: 1px solid red;
+    border: 1px solid white;
+    border-radius: 5px;
     text-align: center;
     margin: 0;
 }
@@ -230,7 +234,8 @@ h2 {
     left: 20%;
     height: 40%;
     width: 60%;
-    border: 1px solid red;
+    border: 1px solid white;
+    border-radius: 5px;
     text-align: center;
 }
 
@@ -242,4 +247,5 @@ h2 {
     left: 20%;
     height: 30%;
     width: 60%;
+    border-radius: 5px;
 }
